// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inputs Updater Inputs Updater: handles duplicate inserts/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "12341234",
      "input_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "input_transaction_id": "12341234",
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "12341234",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "23452345",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "23452345",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Inputs Updater Inputs Updater: handles insert/save 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "12341234",
      "input_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "input_transaction_id": "12341234",
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "12341234",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "23452345",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "23452345",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Inputs Updater Inputs Updater: handles reverting inputs/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "12341234",
      "input_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "input_transaction_id": "12341234",
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "12341234",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "23452345",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "23452345",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Inputs Updater Inputs Updater: handles reverting inputs/saves 2`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "12341234",
      "input_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "input_transaction_id": "12341234",
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "12341234",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "23452345",
      "input_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "input_transaction_id": "23452345",
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "23452345",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Inputs Updater Inputs Updater: handles reverting inputs/saves 3`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "12341234",
      "input_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "input_transaction_id": "12341234",
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "12341234",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
    Object {
      "address_id": "APyEx5f4Zm4oCHwFWiSTaph1fAAAAAAAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "23452345",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 10,
      "output_transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "output_transaction_id": "23452345",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "1",
    },
  ],
  "transfer": Array [],
}
`;
